--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "supertest": "^6.1.3"
   },
   "lint-staged": {
-    "*.js": "eslint  --fix ",
+    "*.js": "eslint --cache --fix ",
     "*.js": "prettier --write "
   }
 }
