--- a/package.json
+++ b/package.json
@@ -34,7 +34,6 @@
   },
   "lint-staged": {
   
-    "*.js": "prettier --write ",
-    "*.{js}": "eslint  --fix "
+    "*.js": "eslint  --fix "
   }
 }
